# Splitwise-Clone

./: LICENSE  README.md  package-lock.json  start-both-manual.ps1  start-both.bat  start-both.ps1
splitwise-backend/: .env  .env.example  Cargo.toml  DATABASE_SCHEMA.md  create-db-user.js  db-check.js  healthcheck.js  package-lock.json  recreate-tables.js  run-backend.bat  setup-database.js  verify-schema.js
splitwise-backend/src/: config.rs  lib.rs  main.rs
splitwise-backend/src/db/: connection.rs  mod.rs  schema.rs
splitwise-backend/src/db/migrations/: 20240101000001_initial_schema.sql
splitwise-backend/src/handlers/: auth_handler.rs  expense_handler.rs  group_handler.rs  mod.rs  user_handler.rs
splitwise-backend/src/models/: expense.rs  group.rs  mod.rs  split.rs  user.rs
splitwise-backend/src/routes/: auth.rs  expenses.rs  groups.rs  mod.rs  users.rs
splitwise-backend/src/utils/: auth.rs  error.rs  helpers.rs  mod.rs
splitwise-frontend/: App.js  app.json  package-lock.json  package.json
splitwise-frontend/android/: settings.gradle
splitwise-frontend/assets/: README.md
splitwise-frontend/context/: AuthContext.js  ExpenseContext.js  GroupContext.js
splitwise-frontend/hooks/: useExpenses.js  useGroups.js
splitwise-frontend/ios/: Podfile
splitwise-frontend/navigation/: AppNavigator.js  AuthNavigator.js  GroupNavigator.js
splitwise-frontend/screens/: AddExpenseScreen.js  DashboardScreen.js  FriendScreen.js  GroupScreen.js  LoginScreen.js  SettleUpScreen.js  SignupScreen.js
splitwise-frontend/services/: api.js  authService.js  groupService.js  (+2 more)
(+25 files in other folders)
