[package]
name = "splitwise-backend"
version = "0.1.0"
edition = "2021"


[dependencies]
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
sqlx = { version = "0.7", features = [ "runtime-async-std-native-tls", "postgres", "uuid", "chrono", "macros" ] }
dotenvy = "0.15"
config = "0.14.0"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
jsonwebtoken = "8"
bcrypt = "0.15"
env_logger = "0.11.3"
log = "0.4.21"
futures = "0.3.30"
regex = "1.10.4"
argon2 = "0.5.3"
rand = "0.8.5"
tracing = "0.1"
tracing-subscriber = "0.3"

[dev-dependencies]
